# vial-effects

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_installer.bat
.github/workflows/: build-and-release.yml  build-installer-linux.yml  build-installer-macos.yml  build-installer-win.yml  build-installer.yml  lint-commits.yml
installer/: VialEffects.iss  VialEffects.wxs
src/dsp/: Chorus.cpp  Chorus.h  EffectParameters.h  EffectsEngine.cpp  EffectsEngine.h
src/dsp/vial/common/: synth_constants.h
src/dsp/vial/effects/: delay.cpp  delay.h  reverb.cpp  reverb.h
src/dsp/vial/framework/: feedback.h  futils.h  operators.cpp  operators.h  poly_utils.h  poly_values.h  processor.h  processor_router.cpp  utils.cpp  utils.h  value.cpp
src/dsp/vial/lookups/: memory.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: TestMain.cpp
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  hooks.ts  main.tsx  params.ts  styles.css
ui/src/components/: ComboBox.tsx  Knob.tsx  Panel.tsx  ValueBox.tsx  Visualizers.tsx
ui/src/juce/: mock.ts
ui/src/test/: App.test.tsx  params.test.ts
